# cards

./: .dockerignore  Dockerfile  README.md  docker-compose.yaml  servers.json
.github/workflows/: build-push.yml
api/: Dockerfile  README.md  README.rst  pyproject.toml
api/app/: main.py
api/app/core/: config.py
api/app/db/: crud.py  database.py
api/app/models/: models.py  schemas.py
api/app/routes/: api.py  cards.py
api/app/util/: init_data.py
ui/: Dockerfile  README.md  package.json
ui/nginx/: default.conf.template
ui/src/: App.tsx
ui/src/features/card/: Card.tsx
ui/src/features/cards-deck/: CardsDeck.tsx
ui/src/features/image-dialog/: ImageDialog.tsx
ui/src/util/: Util.ts
