[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Jovin Jijo <jovin96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.68.1"
SQLAlchemy = "^1.4.23"
pydantic = "^1.8.2"
psycopg2-binary = "^2.9.1"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
